tui/crates/tui/src/snapshots/weave_tui__render_snapshots__disconnected.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
■ Disconnected: the agent exited
── viewport ──

› Ask Agent anything
  agent disconnected · ctrl+c to quit                              Agent
