tui/crates/tui/src/snapshots/weave_tui__render_snapshots__fullscreen_following_the_newest_output.snap
---
source: crates/tui/src/render_snapshots.rs
expression: "full_screen(&chat, 16)"
---
  Worked for less than a second • 12:00


› question 3


• Answer 3, first line.
  And a second line.

• Run tests

• Working (0s • esc to interrupt)

› Ask Agent to do anything

  Agent · /repo
