tui/crates/tui/src/snapshots/weave_tui__render_snapshots__fullscreen_reading_earlier_output_as_more_arrives.snap
---
source: crates/tui/src/render_snapshots.rs
expression: "full_screen(&chat, 16)"
---
  Worked for less than a second • 12:00


› question 2


• Answer 2, first line.
  And a second line.

  Worked for less than a second • 12:00
  ↓ new output below · esc for latest
• Working (0s • esc to interrupt)

›

  Agent
