tui/crates/tui/src/snapshots/weave_tui__render_snapshots__picker_settings.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──

── viewport ──

  Session settings
› Mode  Ask
  Model  Small
  Verbose  off
  ↑↓ choose · enter change · esc close
