tui/crates/tui/src/snapshots/weave_tui__render_snapshots__prompt_permission.snap
---
source: crates/tui/src/render_snapshots.rs
expression: "render_view(view.desired_height(WIDTH), |area, buf| view.render(area, buf))"
---

  Would you like to run the following command?

  $ cargo test

› 1. Allow once (y)
  2. Always allow cargo (a)
  3. Reject (esc)

  Press enter to confirm or esc to cancel
