tui/crates/tui/src/snapshots/weave_tui__render_snapshots__turn_running_with_a_queued_message.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
› first
── viewport ──

• Working (0s • esc to interrupt)
 ↳ follow-up

› Ask Agent to do anything

  Agent · /repo
