tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_agent_message_chunk.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• ## Result

  The build failed in parser.rs:

  - missing ; on line 12
  - see the docs (https://doc.rust-lang.org)

  let x = 1;
── viewport ──


› Ask Agent to do anything

  Agent
