tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_agent_thought_chunk.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──
• The tests fail because the fixture moved.

• Found it.
── viewport ──

› Ask Agent anything
  ⏎ send · ⇧⏎ newline · ⌃C quit                                    Agent
