tui/crates/tui/src/snapshots/weave_tui__render_snapshots__update_available_commands_update.snap
---
source: crates/tui/src/render_snapshots.rs
expression: screen(&mut chat)
---
── transcript ──

── viewport ──

› /review  Review the current changes
  /test    Run the test suite
› /
  ⏎ send · ⇧⏎ newline · ⌃C quit                                    Agent
